# haskell-book-solutions

./: .gitignore  AllAboutMonads.hs  IntroToParsers.hs  Laws.hs  MonadTransformers.hs  MonadsWikiBook.hs  Practice.hs  ReaderMonadExample.hs  StateHaskellWiki.hs  WriterMonadExample.hs  y-combinator.hs
Extensions/: PatternSynonyms.hs  ViewPatterns.hs
atypeofprog/: Covariance.hs  FalseFunctor.hs
chap-1/: FunctionWithLet.hs  FunctionWithWhere.hs  exer.hs  learn.hs  test.hs  where.hs
chap-10/: databaseProcessing.hs  fibs.hs  foldrVisTrick.hs  revision.hs  rewritingWithFolds.hs  warmUpAndReview.hs
chap-11/: asPatterns.hs  binaryTree.hs  const&deconst.hs  const.hs  deconst.hs  exer.hs  functions.hs  garden.hs  huttonsRazor.hs  logicGoats.hs  newtype.hs  phoneExercise.hs  pityTheBool.hs  productTypes.hs  programmers.hs  quad.hs  revision.hs  vehicles.hs
chap-12/: binaryTree.hs  either.hs  eitherExer.hs  exer.hs  maybe.hs  natural.hs  revision.hs  unfolding.hs
chap-13/: caesarVigenere.hs  makePerson.hs  palindrome.hs  revision.hs
chap-14/: arbitrary.hs  revision.hs
chap-15/: FiveSidedDie.hs  Madness.hs  Optional.hs  OrgansMap.hs  PTable.hs  revision.hs  time_series.hs
chap-16/: Constant.hs  HeavyLifting.hs  IO.hs  NaturalTransform.hs  NthFibonacci.hs  ReplaceExperiment.hs  functor1.hs  functorFun.hs  helloPerson.hs  pizza.hs  revision.hs  sum.hi  sum.hs  sum_lazy.hs
chap-17/: ApplicativeLaws.hs  Constant.hs  FixerUpper.hs  Identity.hs  Lookups.hs  MakePerson.hs  applic.hs
chap-19/url-shortener/: url-shortener.cabal
chap-19/url-shortener/src/: Main.hs
(+233 files in other folders)
