name:                url-shortener
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/url-shortener#readme
license:             BSD3
license-file:        LICENSE
author:              Ali Nisar Ahmed
maintainer:          example@example.com
copyright:           2019 Ali Nisar Ahmed
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable url-shortener
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , hedis
                      , mtl
                      , network-uri
                      , random
                      , scotty
                      , semigroups
                      , text
                      , transformers
  default-language:    Haskell2010
